--- a/TShirts/producto.html
+++ b/TShirts/producto.html
@@ -24,13 +24,13 @@
       <div class="slide-container">
         <div class="slide-show">
           <div class="slider fade">
-            <img src="../img/img1.jpg" alt="" />
+            <img src="img/img1.jpg" alt="" />
           </div>
           <div class="slider fade">
-            <img src="../img/img2.jpg" alt="" />
+            <img src="img/img2.jpg" alt="" />
           </div>
           <div class="slider fade">
-            <img src="../img/img3.jpg" alt="" />
+            <img src="img/img3.jpg" alt="" />
           </div>
           <div class="direction">
             <a href="#" class="atras" onclick="avanzaSlide(-1)">&#10094;</a>
@@ -47,7 +47,7 @@
         <section class="cards">
           <div class="card">
             <div class="card__image-container">
-              <img src="../img/img1.jpg" />
+              <img src="img/img1.jpg" />
             </div>
             <div class="card__content">
               <p class="card__title text--medium">Camiseta Local Conmebol FC</p>
@@ -59,7 +59,7 @@
           </div>
           <div class="card">
             <div class="card__image-container">
-              <img src="../img/img2.jpg" />
+              <img src="img/img2.jpg" />
             </div>
             <div class="card__content">
               <p class="card__title text--medium">
@@ -73,7 +73,7 @@
           </div>
           <div class="card">
             <div class="card__image-container">
-              <img src="../img/img3.jpg" />
+              <img src="img/img3.jpg" />
             </div>
             <div class="card__content">
               <p class="card__title text--medium">
@@ -87,7 +87,7 @@
           </div>
           <div class="card">
             <div class="card__image-container">
-              <img src="../img/img4.jpg" />
+              <img src="img/img4.jpg" />
             </div>
             <div class="card__content">
               <p class="card__title text--medium">
@@ -101,7 +101,7 @@
           </div>
           <div class="card">
             <div class="card__image-container">
-              <img src="../img/img5.jpg" />
+              <img src="img/img5.jpg" />
             </div>
             <div class="card__content">
               <p class="card__title text--medium">
@@ -115,7 +115,7 @@
           </div>
           <div class="card">
             <div class="card__image-container">
-              <img src="../img/img6.jpg" />
+              <img src="img/img6.jpg" />
             </div>
             <div class="card__content">
               <p class="card__title text--medium">
@@ -129,7 +129,7 @@
           </div>
           <div class="card">
             <div class="card__image-container">
-              <img src="../img/img8.jpg" />
+              <img src="img/img8.jpg" />
             </div>
             <div class="card__content">
               <p class="card__title text--medium">
@@ -143,7 +143,7 @@
           </div>
           <div class="card">
             <div class="card__image-container">
-              <img src="../img/img9.jpg" />
+              <img src="img/img9.jpg" />
             </div>
             <div class="card__content">
               <p class="card__title text--medium">
@@ -157,7 +157,7 @@
           </div>
           <div class="card">
             <div class="card__image-container">
-              <img src="../img/img10 (1).jpg" />
+              <img src="img/img10 (1).jpg" />
             </div>
             <div class="card__content">
               <p class="card__title text--medium">Camiseta De Quilmes</p>
@@ -173,6 +173,6 @@
     <footer>
       <h3>Copyright 2022 - T-Shirts Maker's</h3>
     </footer>
-    <script src="../javascript/productos.js"></script>
+    <script src="javascript/productos.js"></script>
   </body>
 </html>
