--- a/TShirts/contacto.html
+++ b/TShirts/contacto.html
@@ -17,11 +17,11 @@
       <nav class="nav-main">
         <h1 id="logo" class="focus-in-expand">T-Shirts <span>Maker's</span></h1>
         <ul class="nav-menu">
-          <li><a href="./inicio.html"> Inicio</a></li>
-          <li><a href="./quienesSomos.html"> Quienes Somos</a></li>
-          <li><a href="./producto.html"> Productos</a></li>
-          <li><a href="./faq.html" > Faq</a></li>
-          <li><a href="./contacto.html" > Contacto</a></li>
+          <li><a href="inicio.html"> Inicio</a></li>
+          <li><a href="quienesSomos.html"> Quienes Somos</a></li>
+          <li><a href="producto.html"> Productos</a></li>
+          <li><a href="faq.html" > Faq</a></li>
+          <li><a href="contacto.html" > Contacto</a></li>
         </ul>
       </nav>
       <main>
@@ -72,8 +72,8 @@
     <footer>
       <h3>Copyright 2022 - T-Shirts Maker's</h3>
     </footer>
-    <script src="../javascript/contacto.js"></script>
-    <!-- <script src="../javascript/contacto.js"></script>
-    <script src="../javascript/navbar.js"></script> -->
+    <script src="javascript/contacto.js"></script>
+    <!-- <script src=".javascript/contacto.js"></script>
+    <script src=".javascript/navbar.js"></script> -->
   </body>
 </html>
