--- a/TShirts/faq.html
+++ b/TShirts/faq.html
@@ -13,11 +13,11 @@
         <nav class="nav-main">
           <h1 id="logo" class="focus-in-expand">T-Shirts <span>Maker's</span></h1>
           <ul class="nav-menu">
-            <li><a href="./inicio.html"> Inicio</a></li>
-            <li><a href="./quienesSomos.html"> Quienes Somos</a></li>
-            <li><a href="./producto.html"> Productos</a></li>
-            <li><a href="./faq.html" > Faq</a></li>
-            <li><a href="./contacto.html" > Contacto</a></li>
+            <li><a href="inicio.html"> Inicio</a></li>
+            <li><a href="quienesSomos.html"> Quienes Somos</a></li>
+            <li><a href="producto.html"> Productos</a></li>
+            <li><a href="faq.html" > Faq</a></li>
+            <li><a href="contacto.html" > Contacto</a></li>
           </ul>
         </nav>
         <main >
@@ -41,6 +41,6 @@
     <footer>
         <h3>Copyright 2022 - T-Shirts Maker's</h3>
       </footer>
-      <script src="../javascript/index.js"></script>
+      <script src="javascript/index.js"></script>
 </body>
 </html>
