--- a/TShirts/contacto.html
+++ b/TShirts/contacto.html
@@ -26,7 +26,7 @@
       </nav>
       <main>
         <div id="container-form">
-          <form id="form" action="" method="POST">
+          <form id="form" action="">
             <h1>Contacto</h1>
             <label for="name">Nombre</label>
             <input type="text" name="name" id="name" placeholder="Nombre"/>
